welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:25: error: ':' expected but ',' found.
def move(x,y,dirEst) {
          ^ZigZag:63: error: identifier expected but '}' found.
}
^